--- a/Diseño.html
+++ b/Diseño.html
@@ -56,7 +56,7 @@
                             aria-haspopup="true" aria-expanded="false">PRDUCTOS</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
                             <a class="dropdown-item" href="alojamiento.html">AlOJAMIENTO</a>
-                            <a class="dropdown-item" href="#">DISEÑO</a>
+                            <a class="dropdown-item" href="Diseño.html">DISEÑO</a>
                             <a class="dropdown-item" href="#">CONSTRUCCIÓN</a>
                             <a class="dropdown-item" href="#">MENTENIMIENTO</a>
                         </div>
@@ -82,27 +82,61 @@
             <ol class="breadcrumb bg-white">
                 <li class="breadcrumb-item"><a href="index.html">HOME</a></li>
                 <li class="breadcrumb-item"><a href="index.html">PRODUCTOS</a></li>
-                <li class="breadcrumb-item active" aria-current="page">ALOJAMIENTO</li>
+                <li class="breadcrumb-item active" aria-current="page"> DISEÑO</li>
             </ol>
         </nav>
 
         <div class="my-5 row d-flex justify-content-center">
-            <h1 class="display-4 align-center">Alojamiento de páginas web</h1>
+            <h1 class="display-4 align-center">Diseño de páginas web</h1>
+            <p class="align-center">Desarrollamos soluciones con resultados reales sobre
+                plataformas digitales permitiendo a
+                las empresas explotar todo su potencial en la web.</p>
+            <h3 class="align-center">Ejemplos de exito!!!</h3>
         </div>
 
-        <div class="py-5 row ">
+
+        <div class="row">
             <div class="card-deck text-dark ">
-                <div class="card shadow-lg mb-5 rounded border-0 ">
-                    <div class="card-body text-center">
-                        <h1>Servidor Compartido</h1>
-                        <h1></h1>
-                        <div class="my-5">
-                            <h2>AR$7.000,00</h2>
-                            <h5>por mes</h5>
+                <div class="card shadow-lg mb-5 bg-white border-0 ">
+                    <img class="card-img-top" src="images/Samsung.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Samsung</h5>
+                        <div class="d-flex justify-content-end">
+                            <button class="btn btn-primary" type="">Ir a la página</button>
                         </div>
-                        <p class="lead"><i class="bi bi-globe"></i> 1 Dominio incluido</p>
-                        <p class="lead"><i class="bi bi-envelope"></i> 10 GB de Correo</p>
-                        <p class="lead"><i class="bi bi-hdd"></i> 10 GB Espacio Web</p>
+                    </div>
+                </div>
+                <div class="card shadow-lg mb-5 bg-white border-0">
+                    <img class="card-img-top" src="images/Movistar.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Movistar</h5>
+                        <div class="d-flex justify-content-end">
+                            <button class="btn btn-primary" type="">Ir a la página</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card shadow-lg mb-5 bg-white  border-0">
+                    <img class="card-img-top" src="images/Walmart.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Walmart</h5>
+                        <div class="d-flex justify-content-end">
+                            <button class="btn btn-primary" type="">Ir a la página</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- 
+        <div class="my-5 row justify-content-center">
+            <div class="card-deck  text-dark">
+                <div class="card shadow-lg justify-content-center rounded border-0">
+                    <div class="card-body text-center">
+                        <h1 class="mx-5">Diseño Básico</h1>
+                        <div class="my-5">
+                            <h2>AR$10.000</h2>
+                        </div>
+                        <p class="lead"><i class="bi bi-columns-gap"></i> Hasta 3 páginas</p>
                     </div>
                     <div class="card-footer d-flex justify-content-center bg-white border-0 mb-5">
                         <button class="btn btn-success">
@@ -110,40 +144,24 @@
                         </button>
                     </div>
                 </div>
-                <div class="card shadow-lg mb-5 rounded border-0">
-                    <div class="card-body text-center">
-                        <h1 class="mx-5">Servidor Básico</h1>
-                        <div class="my-5">
-                            <h2>AR$13.000,00</h2>
-                            <h5>por mes</h5>
-                        </div>
-                        <p class="lead"><i class="bi bi-globe"></i> 1 Dominio incluido</p>
-                        <p class="lead"><i class="bi bi-envelope"></i> 20 GB de Correo</p>
-                        <p class="lead"><i class="bi bi-hdd"></i> 20 GB Espacio Web</p>
-                    </div>
-                    <div class="card-footer d-flex justify-content-center bg-white border-0 mb-5">
-                        <button class="btn btn-success">
-                            <h4>Agregar al Carrito</h4>
-                        </button>
-                    </div>
-                </div>
-                <div class="card shadow-lg mb-5 rounded border-warning border-1">
+                <div class="card shadow-lg rounded border-warning border-1">
                     <div class="card-title bg-warning text-center py-3">
                         <h4>¡Recomendado!</h4>
                     </div>
                     <div class="card-body text-center">
-                        <h1 class="mx-5">Servidor VIP</h1>
+                        <h1 class="mx-5">Diseño Pro</h1>
                         <div class="my-5">
-                            <h2>AR$22.000,00</h2>
-                            <h5>por mes</h5>
+                            <h2 name="Valor" id="Valor">AR$ 16.500</h2>
                         </div>
-                        <p class="lead"><i class="bi bi-globe"></i> 3 Dominios incluidos</p>
-
-                        <p class="lead"><i class="bi bi-envelope"></i> 80 GB de Correo</p>
-
-                        <p class="lead"><i class="bi bi-hdd"></i> 150 GB Espacio Web</p>
-
+                        <p class="lead"><i class="bi bi-columns-gap"></i>
+                            Con 3 páginas se cobrara $15.000 más un adicional de $1.500 pesos por cada página extra
+                            pedida.
+                        </p>
                     </div>
+                    <form class="form-inline justify-content-center">
+                        <label for="staticEmail" class="col-form-label">Cantidad de páginas</label>
+                        <input type="number" class="form-control ml-5" min="4" name="Input" value="4" id="Input">
+                    </form>
                     <div class="card-footer d-flex justify-content-center bg-white border-0 mb-5">
                         <button class="btn btn-success">
                             <h4>Agregar al Carrito</h4>
@@ -151,120 +169,63 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
-        <div class="my-5 row d-flex justify-content-center">
-            <h2 class="display-4 align-center">Promociones especiales</h2>
-        </div>
-        <div class="py-5 row justify-content-center">
-            <div class="card-deck text-dark col-12">
-                <div class="card bg-warning shadow-lg mb-5 rounded border-0 ">
+
+
+
+        <div class="my-5 row justify-content-center">
+            <div class="card-deck  text-dark">
+                <div class="card shadow-lg justify-content-center rounded border-0">
                     <div class="card-body text-center">
-                        <h1>Promo 1</h1>
+                        <h1 class="mx-5">Diseño Básico</h1>
                         <div class="my-5">
-                            <h1>AR$32.000,00</h1>
-                            <h5>por mes (antes del descuento)</h5>
-                            <h3>+</h3>
-                            <h1>5% de descuento</h1>
-                            <h5>(al precio inicial y mensual)</h5>
-                            <div class="h-100 d-inline-block">
-                            </div>
-
+                            <h1>AR $10.000,00</h1>
+                            <h5>Hasta tres páginas.</h5>
                         </div>
-                        <div class="my-5">
-                            <hr />
-                        </div>
-                        <h2>¿Qué incluye?</h2>
-
-                        <div class="my-5">
-                            <h3 class="my-3">Servidor VIP</h3>
-                            <div class="my-3">
-                                <p class="lead"><i class="bi bi-globe"></i> 3 Dominios incluidos</p>
-                            </div>
-                            <div class="my-3">
-                                <p class="lead"><i class="bi bi-envelope"></i> 80 GB de Correo</p>
-                            </div>
-                            <div class="my-3">
-                                <p class="lead"><i class="bi bi-hdd"></i> 150 GB Espacio Web</p>
-                            </div>
-                        </div>
-
-                        <div class="my-5">
-                            <h3>Mantenimiento Pro</h3>
-                            <div class="my-3">
-                                <p class="lead"><i class="bi bi-life-preserver"></i> 10 horas o más de consultoría</p>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="card-footer d-flex justify-content-center bg-warning border-0 mb-5">
-                        <button class="btn btn-success">
-                            <h4>Agregar al Carrito</h4>
-                        </button>
                     </div>
                 </div>
-                <div class="card bg-warning shadow-lg mb-5 rounded border-0 ">
+                <div class="card shadow-lg rounded border-warning border-1">
+                    <div class="card-title bg-warning text-center py-3">
+                        <h4>¡Recomendado!</h4>
+                    </div>
                     <div class="card-body text-center">
-                        <h1>Promo 2</h1>
-                        <div class="my-5">
-                            <h1>AR$23.000,00</h1>
-                            <h5>por mes (antes del descuento)</h5>
-                            <h3>+</h3>
-                            <h1>AR$15.000,00</h1>
-                            <h5>de costo inicial (antes del descuento)</h5>
-                            <h3>+</h3>
-                            <h1>AR$2900,00</h1>
-                            <h5>por página (antes del descuento)</h5>
-                            <h3>+</h3>
-                            <h1>25% de descuento</h1>
-                            <h5>(al precio inicial y mensual)</h5>
-                        </div>
-                        <div class="my-5">
-                            <hr />
-                        </div>
-                        <h2>¿Qué incluye?</h2>
+                        <h1 class="mx-5">Diseño Pro</h1>
 
                         <div class="my-5">
-                            <h3 class="my-3">Servidor Básico</h3>
-                            <div class="my-3">
-                                <p class="lead"><i class="bi bi-globe"></i> 1 Dominio incluido</p>
-                            </div>
-                            <div class="my-3">
-                                <p class="lead"><i class="bi bi-envelope"></i> 20 GB de Correo</p>
-                            </div>
-                            <div class="my-3">
-                                <p class="lead"><i class="bi bi-hdd"></i> 20 GB Espacio Web</p>
-                            </div>
+                            <h1>AR $15.000,00</h1>
+                            <h5>más de tres páginas.</h5>
+                            <h3>+</h3>
+                            <h1>AR $1.500,00</h1>
+                            <h5>por cada página extra
+                                pedida.</h5>
                         </div>
-                        <div class="my-5">
-                            <h3>Mantenimiento Pro</h3>
-                            <div class="my-3">
-                                <p class="lead"><i class="bi bi-life-preserver"></i> 10 horas o más de consultoría</p>
-                            </div>
-                        </div>
-                        <div class="my-5">
-                            <h3 class="my-3">Diseño Pro</h3>
-                            <div class="my-3">
-                                <p class="lead"><i class="bi bi-columns-gap"></i> 3 páginas o más</p>
-                            </div>
-                        </div>
-                        <div class="my-5">
-                            <h3 class="my-3">Construcción Pro</h3>
-                            <div class="my-3">
-                                <p class="lead"><i class="bi bi-hammer"></i> 3 páginas o más</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card-footer d-flex justify-content-center bg-warning border-0 mb-5">
-                        <button class="btn btn-success">
-                            <h4>Agregar al Carrito</h4>
-                        </button>
                     </div>
                 </div>
-
+            </div>
+        </div>
+        <div class="justify-content-center">
+            <div class="card shadow-lg rounded justify-content-center text-center border-warning border-1 mb-xl-5">
+                <div class="card-title">
+                    <h3 class="mx-5 mt-5">Seleccione la cantidad de páginas que quiere que le diseñemos!</h3>
+                </div>
+                <div class="card-body text-center">
+                    <h2 name="Valor" id="Valor">AR$ 10.000</h2>
+                    <form class="form-inline justify-content-center">
+                        <label for="staticEmail" class="col-form-label">Cantidad de páginas</label>
+                        <input type="number" class="form-control ml-5" min="1" name="Input" value="1" id="Input">
+                    </form>
+                </div>
+                <div class="card-footer d-flex justify-content-center bg-white border-0 mb-5">
+                    <button class="btn btn-success">
+                        <h4>Agregar al Carrito</h4>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
+
+
 </body>
 
 <footer class="page-footer text-white page-footer-dark font-small pt-5 pb-4">
@@ -366,5 +327,19 @@
     <div class="footer-copyright text-center py-4">© 2021 Copyright: utn-hosting.com
     </div>
 </footer>
+<script>
+    $("#Input").change(function () {
+        // <= 3 10.000
+        // > 3 15.000 + 1500 extra
+        let paginas = $("#Input").val();
+        if (paginas <= 3) $('#Valor').text("AR$ 10.000");
+
+        if (paginas > 3) {
+            let Valor = 15000;
+            let Monto = (paginas - 3) * 1500 + Valor;
+            $('#Valor').text("AR$ " + new Intl.NumberFormat('de-DE').format(Monto));
+        }
+    });
+</script>
 
 </html>
