--- a/Diseño.html
+++ b/Diseño.html
@@ -53,7 +53,7 @@
                     </li>
                     <li class="nav-item dropdown mr-2">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">PRDUCTOS</a>
+                            aria-haspopup="true" aria-expanded="false">PRODUCTOS</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
                             <a class="dropdown-item" href="alojamiento.html">AlOJAMIENTO</a>
                             <a class="dropdown-item" href="Diseño.html">DISEÑO</a>
@@ -127,50 +127,6 @@
             </div>
         </div>
 
-        <!-- 
-        <div class="my-5 row justify-content-center">
-            <div class="card-deck  text-dark">
-                <div class="card shadow-lg justify-content-center rounded border-0">
-                    <div class="card-body text-center">
-                        <h1 class="mx-5">Diseño Básico</h1>
-                        <div class="my-5">
-                            <h2>AR$10.000</h2>
-                        </div>
-                        <p class="lead"><i class="bi bi-columns-gap"></i> Hasta 3 páginas</p>
-                    </div>
-                    <div class="card-footer d-flex justify-content-center bg-white border-0 mb-5">
-                        <button class="btn btn-success">
-                            <h4>Agregar al Carrito</h4>
-                        </button>
-                    </div>
-                </div>
-                <div class="card shadow-lg rounded border-warning border-1">
-                    <div class="card-title bg-warning text-center py-3">
-                        <h4>¡Recomendado!</h4>
-                    </div>
-                    <div class="card-body text-center">
-                        <h1 class="mx-5">Diseño Pro</h1>
-                        <div class="my-5">
-                            <h2 name="Valor" id="Valor">AR$ 16.500</h2>
-                        </div>
-                        <p class="lead"><i class="bi bi-columns-gap"></i>
-                            Con 3 páginas se cobrara $15.000 más un adicional de $1.500 pesos por cada página extra
-                            pedida.
-                        </p>
-                    </div>
-                    <form class="form-inline justify-content-center">
-                        <label for="staticEmail" class="col-form-label">Cantidad de páginas</label>
-                        <input type="number" class="form-control ml-5" min="4" name="Input" value="4" id="Input">
-                    </form>
-                    <div class="card-footer d-flex justify-content-center bg-white border-0 mb-5">
-                        <button class="btn btn-success">
-                            <h4>Agregar al Carrito</h4>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-
 
 
 
@@ -181,7 +137,8 @@
                         <h1 class="mx-5">Diseño Básico</h1>
                         <div class="my-5">
                             <h1>AR $10.000,00</h1>
-                            <h5>Hasta tres páginas.</h5>
+                            <h5 class="lead"><i class="bi bi-columns-gap"></i> Hasta tres páginas.</h5>
+                            <!-- <h5>Hasta tres páginas.</h5> -->
                         </div>
                     </div>
                 </div>
@@ -194,7 +151,8 @@
 
                         <div class="my-5">
                             <h1>AR $15.000,00</h1>
-                            <h5>más de tres páginas.</h5>
+                            <h5 class="lead"><i class="bi bi-columns-gap"></i> 3 páginas o más.</h5>
+                            <!-- <h5>más de tres páginas.</h5> -->
                             <h3>+</h3>
                             <h1>AR $1.500,00</h1>
                             <h5>por cada página extra
@@ -207,7 +165,7 @@
         <div class="justify-content-center">
             <div class="card shadow-lg rounded justify-content-center text-center border-warning border-1 mb-xl-5">
                 <div class="card-title">
-                    <h3 class="mx-5 mt-5">Seleccione la cantidad de páginas que quiere que le diseñemos!</h3>
+                    <h3 class="mx-5 mt-5">Seleccione la cantidad de páginas a diseñar!</h3>
                 </div>
                 <div class="card-body text-center">
                     <h2 name="Valor" id="Valor">AR$ 10.000</h2>
@@ -225,6 +183,118 @@
         </div>
     </div>
 
+
+    <div class="my-5 row d-flex justify-content-center">
+        <h2 class="display-4 align-center">Promociones especiales</h2>
+    </div>
+    <div class="py-5 row justify-content-center">
+        <div class="card-deck text-dark col-12">
+            <div class="card bg-warning shadow-lg mb-5 rounded border-0 ">
+                <div class="card-body text-center">
+                    <h1>Promo 1</h1>
+                    <div class="my-5">
+                        <h1>AR$32.000,00</h1>
+                        <h5>por mes (antes del descuento)</h5>
+                        <h3>+</h3>
+                        <h1>5% de descuento</h1>
+                        <h5>(al precio inicial y mensual)</h5>
+                        <div class="h-100 d-inline-block">
+                        </div>
+
+                    </div>
+                    <div class="my-5">
+                        <hr />
+                    </div>
+                    <h2>¿Qué incluye?</h2>
+
+                    <div class="my-5">
+                        <h3 class="my-3">Servidor VIP</h3>
+                        <div class="my-3">
+                            <p class="lead"><i class="bi bi-globe"></i> 3 Dominios incluidos</p>
+                        </div>
+                        <div class="my-3">
+                            <p class="lead"><i class="bi bi-envelope"></i> 80 GB de Correo</p>
+                        </div>
+                        <div class="my-3">
+                            <p class="lead"><i class="bi bi-hdd"></i> 150 GB Espacio Web</p>
+                        </div>
+                    </div>
+
+                    <div class="my-5">
+                        <h3>Mantenimiento Pro</h3>
+                        <div class="my-3">
+                            <p class="lead"><i class="bi bi-life-preserver"></i> 10 horas o más de consultoría</p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="card-footer d-flex justify-content-center bg-warning border-0 mb-5">
+                    <button class="btn btn-success">
+                        <h4>Agregar al Carrito</h4>
+                    </button>
+                </div>
+            </div>
+            <div class="card bg-warning shadow-lg mb-5 rounded border-0 ">
+                <div class="card-body text-center">
+                    <h1>Promo 2</h1>
+                    <div class="my-5">
+                        <h1>AR$23.000,00</h1>
+                        <h5>por mes (antes del descuento)</h5>
+                        <h3>+</h3>
+                        <h1>AR$15.000,00</h1>
+                        <h5>de costo inicial (antes del descuento)</h5>
+                        <h3>+</h3>
+                        <h1>AR$2900,00</h1>
+                        <h5>por página (antes del descuento)</h5>
+                        <h3>+</h3>
+                        <h1>25% de descuento</h1>
+                        <h5>(al precio inicial y mensual)</h5>
+                    </div>
+                    <div class="my-5">
+                        <hr />
+                    </div>
+                    <h2>¿Qué incluye?</h2>
+
+                    <div class="my-5">
+                        <h3 class="my-3">Servidor Básico</h3>
+                        <div class="my-3">
+                            <p class="lead"><i class="bi bi-globe"></i> 1 Dominio incluido</p>
+                        </div>
+                        <div class="my-3">
+                            <p class="lead"><i class="bi bi-envelope"></i> 20 GB de Correo</p>
+                        </div>
+                        <div class="my-3">
+                            <p class="lead"><i class="bi bi-hdd"></i> 20 GB Espacio Web</p>
+                        </div>
+                    </div>
+                    <div class="my-5">
+                        <h3>Mantenimiento Pro</h3>
+                        <div class="my-3">
+                            <p class="lead"><i class="bi bi-life-preserver"></i> 10 horas o más de consultoría</p>
+                        </div>
+                    </div>
+                    <div class="my-5">
+                        <h3 class="my-3">Diseño Pro</h3>
+                        <div class="my-3">
+                            <p class="lead"><i class="bi bi-columns-gap"></i> 3 páginas o más</p>
+                        </div>
+                    </div>
+                    <div class="my-5">
+                        <h3 class="my-3">Construcción Pro</h3>
+                        <div class="my-3">
+                            <p class="lead"><i class="bi bi-hammer"></i> 3 páginas o más</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer d-flex justify-content-center bg-warning border-0 mb-5">
+                    <button class="btn btn-success">
+                        <h4>Agregar al Carrito</h4>
+                    </button>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
 </body>
 
