--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </li>
           <li class="nav-item dropdown mr-2">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false">PRDUCTOS</a>
+              aria-expanded="false">PRODUCTOS</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" href="alojamiento.html">AlOJAMIENTO</a>
               <a class="dropdown-item" href="Diseño.html">DISEÑO</a>
