--- a/construccion.html
+++ b/construccion.html
@@ -374,7 +374,7 @@
 
         if (paginas > 3) {
             Monto = (paginas * Valor) * 0.9;
-            $('#Valor').text("AR$ " + new Intl.NumberFormat('de-DE').format(Monto));
+            $('#Valor').text("AR$ " + new Intl.NumberFormat('de-DE').format(Monto) + " (Incluye 10% de Desc)");
         }
     });
 </script>
