--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -26,9 +26,15 @@
         crossorigin="anonymous"></script>
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/pricing/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-
-    <!-- Custom styles for this template -->
-    <link href="./css/styles.css" rel="stylesheet">
+    <link
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    rel="stylesheet"
+  />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.css" rel="stylesheet" />
+  <!-- Custom styles for this template -->
+  <link href="./css/styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -45,24 +51,30 @@
                     <li class="nav-item mr-2">
                         <a class="nav-link" href="index.html">HOME</a>
                     </li>
-                    <li class="nav-item mr-2 active">
+                    <li class="nav-item mr-2">
                         <a class="nav-link" href="aboutus.html">NOSOTROS</a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a class="nav-link" href="#">CONTACTO</a>
+                        <a class="nav-link" href="contacto.html">CONTACTO</a>
                     </li>
                     <li class="nav-item dropdown mr-2">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">PRDUCTOS</a>
+                        <a class="nav-link dropdown-toggle active" href="#" id="dropdown01" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">PRODUCTOS</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item" href="alojamiento.html">AlOJAMIENTO</a>
+                            <a class="dropdown-item" href="alojamiento.html">ALOJAMIENTO</a>
                             <a class="dropdown-item" href="diseño.html">DISEÑO</a>
                             <a class="dropdown-item" href="construccion.html">CONSTRUCCIÓN</a>
                             <a class="dropdown-item" href="mantenimiento.html">MENTENIMIENTO</a>
                         </div>
                     </li>
-                    <li class="nav-item mr-2">
-                        <a class="nav-link" href="#">ARMÁ TU PAQUETE</a>
+                    <li class="nav-item dropdown mr-2">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false"><i class="flag flag-argentina"></i> AR</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown02">
+                            <a class="dropdown-item" href="#"><i class="flag flag-argentina"></i> AR</a>
+                            <a class="dropdown-item" href="#"><i class="flag flag-us"></i> EEUU</a>
+                            <a class="dropdown-item" href="#"><i class="flag flag-brazil"></i> BRA</a>
+                        </div>
                     </li>
                 </ul>
                 <form class="form-inline justify-content-lg-end justify-content-md-start">
