--- a/contacto.html
+++ b/contacto.html
@@ -58,7 +58,7 @@
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">PRODUCTOS</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item" href="alojamiento.html">AlOJAMIENTO</a>
+                            <a class="dropdown-item" href="alojamiento.html">ALOJAMIENTO</a>
                             <a class="dropdown-item" href="diseño.html">DISEÑO</a>
                             <a class="dropdown-item" href="construccion.html">CONSTRUCCIÓN</a>
                             <a class="dropdown-item" href="mantenimiento.html">MENTENIMIENTO</a>
