--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/pricing/">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
 
-  <link rel="stylesheet" href="css/index.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.css" rel="stylesheet" />
+  <!-- Custom styles for this template -->
+  <link href="./css/styles.css" rel="stylesheet">
   <style>
 
   </style>
@@ -40,48 +44,56 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand mr-4" href="index.html"><i class="bi bi-server"></i> UTN-HOSTING</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-        aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <a class="navbar-brand mr-4" href="index.html"><i class="bi bi-server"></i> UTN-HOSTING</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item mr-2">
-            <a class="nav-link" href="index.html">HOME</a>
-          </li>
-          <li class="nav-item mr-2 active">
-            <a class="nav-link" href="aboutus.html">NOSOTROS</a>
-          </li>
-          <li class="nav-item mr-2">
-            <a class="nav-link" href="#">CONTACTO</a>
-          </li>
-          <li class="nav-item dropdown mr-2">
-            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false">PRODUCTOS</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="alojamiento.html">AlOJAMIENTO</a>
-              <a class="dropdown-item" href="Diseño.html">DISEÑO</a>
-              <a class="dropdown-item" href="#">CONSTRUCCIÓN</a>
-              <a class="dropdown-item" href="#">MENTENIMIENTO</a>
-            </div>
-          </li>
-          <li class="nav-item mr-2">
-            <a class="nav-link" href="#">ARMÁ TU PAQUETE</a>
-          </li>
-        </ul>
-        <form class="form-inline justify-content-lg-end justify-content-md-start">
-          <input class="form-control col-md-7 d-md-none d-lg-none d-xl-block mr-lg-2" type="text" placeholder="Buscar"
-            aria-label="Buscar">
-          <button class="btn btn-primary mr-3 my-2 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
-          <button type="button" class="btn btn-success">
-            <i class="bi bi-cart3"></i>
-          </button>
-        </form>
-      </div>
+        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item mr-2">
+                    <a class="nav-link active" href="index.html">HOME</a>
+                </li>
+                <li class="nav-item mr-2">
+                    <a class="nav-link" href="aboutus.html">NOSOTROS</a>
+                </li>
+                <li class="nav-item mr-2">
+                    <a class="nav-link" href="contacto.html">CONTACTO</a>
+
+                </li>
+                <li class="nav-item dropdown mr-2">
+                    <a class="nav-link dropdown-toggle " href="#" id="dropdown01" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">PRODUCTOS</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown01">
+                        <a class="dropdown-item" href="alojamiento.html">ALOJAMIENTO</a>
+                        <a class="dropdown-item" href="diseño.html">DISEÑO</a>
+                        <a class="dropdown-item" href="construccion.html">CONSTRUCCIÓN</a>
+                        <a class="dropdown-item" href="mantenimiento.html">MENTENIMIENTO</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown mr-2">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false"><i class="flag flag-argentina"></i> AR</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown02">
+                        <a class="dropdown-item" href="#"><i class="flag flag-argentina"></i> AR</a>
+                        <a class="dropdown-item" href="#"><i class="flag flag-us"></i> EEUU</a>
+                        <a class="dropdown-item" href="#"><i class="flag flag-brazil"></i> BRA</a>
+                    </div>
+                </li>
+            </ul>
+            <form class="form-inline justify-content-lg-end justify-content-md-start">
+                <input class="form-control col-md-7 d-md-none d-lg-none d-xl-block mr-lg-2" type="text"
+                    placeholder="Buscar" aria-label="Buscar">
+                <button class="btn btn-primary mr-3 my-2 my-sm-0" type="submit"><i
+                        class="bi bi-search"></i></button>
+                <button type="button" class="btn btn-success">
+                    <i class="bi bi-cart3"></i>
+                </button>
+            </form>
+        </div>
     </div>
-  </nav>
+</nav>
 
 
   <main role="main">
