--- a/aboutus.html
+++ b/aboutus.html
@@ -26,7 +26,7 @@
         crossorigin="anonymous"></script>
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/pricing/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-   
+
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <!-- MDB -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.css" rel="stylesheet" />
@@ -56,7 +56,7 @@
                     </li>
                     <li class="nav-item dropdown mr-2">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">PRDUCTOS</a>
+                            aria-haspopup="true" aria-expanded="false">PRODUCTOS</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
                             <a class="dropdown-item" href="alojamiento.html">ALOJAMIENTO</a>
                             <a class="dropdown-item" href="diseño.html">DISEÑO</a>
